resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-go
spec:
  selector:
    app: demo-app-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
